fix overflow text in queue card

--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@
 
 /* comment page */
 .comment-heading-font{
-  @apply text-blue-950 font-bold text-2xl
+  @apply text-blue-950 font-bold text-2xl text-center
 }
 
 .comment-sub-heading-bold-font{
